# textconverter

./: pyproject.toml
textconverter/: README.md  core.py
textconverter/tests/: test_cli.py  test_core.py
textconverter/textconverter/: __init__.py  cli.py
