[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "textconverter"
version = "0.1.0"
description = "Unified text encoding/decoding toolkit"
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/yourusername/textconverter"